<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="800dp"
    android:background="@drawable/backgroundapp1"
    tools:context="com.zulfadar.bisindgo.ui.register.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/welcome"
            android:textStyle="bold"
            android:textSize="35sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="28sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/welcome"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <EditText
            android:id="@+id/edt_firstname"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:hint="@string/first_name"
            android:textSize="20sp"
            android:background="@drawable/rounded_shape"
            android:paddingLeft="17dp"
            android:backgroundTint="@color/grey"
            app:layout_constraintTop_toBottomOf="@+id/app_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <EditText
            android:id="@+id/edt_lastname"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:hint="@string/last_name"
            android:textSize="20sp"
            android:background="@drawable/rounded_shape"
            android:paddingLeft="17dp"
            android:backgroundTint="@color/grey"
            app:layout_constraintTop_toBottomOf="@+id/edt_firstname"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <EditText
            android:id="@+id/edt_email_register"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:hint="@string/email"
            android:textSize="20sp"
            android:background="@drawable/rounded_shape"
            android:paddingLeft="17dp"
            android:backgroundTint="@color/grey"
            app:layout_constraintTop_toBottomOf="@+id/edt_lastname"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <EditText
            android:id="@+id/edt_notelp"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:hint="@string/no_telp"
            android:textSize="20sp"
            android:inputType="number"
            android:background="@drawable/rounded_shape"
            android:paddingLeft="17dp"
            android:backgroundTint="@color/grey"
            app:layout_constraintTop_toBottomOf="@+id/edt_email_register"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <EditText
            android:id="@+id/edt_password_register"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:background="@drawable/rounded_shape"
            android:paddingLeft="17dp"
            android:backgroundTint="@color/grey"
            app:layout_constraintTop_toBottomOf="@+id/edt_notelp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <EditText
            android:id="@+id/edt_konfirpassword_register"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:hint="@string/konfirmasi_password"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:background="@drawable/rounded_shape"
            android:paddingLeft="17dp"
            android:backgroundTint="@color/grey"
            app:layout_constraintTop_toBottomOf="@+id/edt_password_register"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />


        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/register_btn"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:padding="5dp"
            android:text="@string/button_register"
            android:textSize="24dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/rounded_shape"
            android:backgroundTint="@color/blue"
            app:layout_constraintTop_toBottomOf="@+id/edt_konfirpassword_register"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_btn">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sudah_punya_akun"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginRight="4dp"/>

            <TextView
                android:id="@+id/toLogin_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masuk_sekarang"
                android:textColor="@color/blue2"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>