<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.zulfadar.bisindgo.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dictionary"
        android:name="com.zulfadar.bisindgo.ui.dictionary.DictionaryFragment"
        android:label="@string/title_dictionary"
        tools:layout="@layout/fragment_dictionary" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.zulfadar.bisindgo.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_user_account_edit_profile"
            app:destination="@id/user_account_edit_profile" />
    </fragment>

    <fragment
        android:id="@+id/user_account_edit_profile"
        android:name="com.zulfadar.bisindgo.ui.edituserprofile.FragmentEditUserProfile"
        android:label="edit profile"
        tools:layout="@layout/fragment_edit_user_profile2" />
</navigation>